# lager

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
example/lager_ext/: CMakeLists.txt  at_lens.cpp  at_lens.h  delta_undo_engine.cpp  delta_undo_engine.h  diff_collector.cpp  diff_collector.h  editor_engine.cpp  editor_engine.h  editor_main.cpp  erased_lens.cpp  erased_lens.h  fast_shared_value.h  json_pointer.cpp  json_pointer.h  lager_lens.cpp  lager_lens.h  main.cpp  multi_store_engine.cpp  multi_store_engine.h  path_utils.h  shared_state.cpp  shared_state.h  shared_value.h  shared_value_demo.cpp  static_path.cpp  static_path.h  value.cpp  value.h
example/pathlens/: CMakeLists.txt  at_lens.cpp  at_lens.h  delta_undo_engine.cpp  delta_undo_engine.h  diff_collector.cpp  diff_collector.h  editor_engine.cpp  editor_engine.h  editor_main.cpp  erased_lens.cpp  erased_lens.h  fast_shared_value.h  json_pointer.cpp  json_pointer.h  lager_lens.cpp  lager_lens.h  main.cpp  multi_store_engine.cpp  multi_store_engine.h  path_utils.h  shared_state.cpp  shared_state.h  shared_value.h  shared_value_demo.cpp  static_path.cpp  static_path.h  value.cpp  value.h
test/: CMakeLists.txt
